# Proyecto

./: README.md  TODO  gitcommands  update
LCMNAO/: CMakeLists.txt  lcmnao.h  qiproject.xml
propuesta/: makefile  propuesta.aux  propuesta.tex
tests/Aldebaran/alspeechbasedreaction/: alspeechbasedreaction.cpp  alspeechbasedreaction.h  qiproject.xml
tests/Aldebaran/alspeechbasedreaction/build-ff/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/Aldebaran/bumper/: bumper.cpp
tests/Aldebaran/bumper/build-ff/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/Aldebaran/events/build-ff/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/Aldebaran/helloworld/: helloworld.h
tests/Aldebaran/helloworld/build-ff/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/Aldebaran/leds/build-ff/: CMakeCache.txt  Makefile  (+1 more)
tests/Aldebaran/onfacedetection/: onfacedetection.cpp
tests/Aldebaran/sayhelloworld/: sayhelloworld.cpp
tests/Aldebaran/soundbasedreaction/: CMakeLists.txt  alsoundbasedreaction.cpp
tests/combination/: CMakeLists.txt  main.cpp  qiproject.xml  sourcelocalization.cpp  sourcelocalization.h
tests/combination/build-ff/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/moveandres/: CMakeLists.txt  movehead.cpp  qiproject.xml
tests/moveandres/build-ff/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/new/: CMakeLists.txt  qiproject.xml  sourcelocalization.cpp  sourcelocalization.h
tests/new/build-cross/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/new/build-ff/: CMakeCache.txt  Makefile  cmake_install.cmake
(+10 files in other folders)
